# lumiere

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  build.sh  docs_landing.md  gen_docs.sh  readme.md  run_test.sh  test.sh  todo.md
src/: cli.cpp  cli.hpp  get_string.cpp  log.cpp  main.cpp
src/common/: colours.h  debug.hpp  err_codes.h  get_string.hpp  log.hpp
src/lu_parser/: CMakeLists.txt  ast.cpp  ast.hpp  ast_enums.h  bison.y  bison_log.txt  cmp_time_extensible.cpp  cmp_time_extensible.hpp  driver.cpp  driver.hpp  flex.l  llvm_inst.cpp  llvm_inst.hpp  main_context.cpp  main_context.hpp  module_context.cpp  module_context.hpp
test/: 1  1.cpp  1.ll  1.lu  2  2.cpp  2.ll  2.lu  example.lu
test/1/: 1  1.cpp  1.ll  1.lu
test/2/: 2  2.ll  2.lu  out
test/include/: common.hpp
